--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -122,18 +122,34 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, alacritty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, F12, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, RETURN, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
+bind = $mainMod, N, cyclenext
+
+bind = $mainMod, L, exec, waylock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Move focus with vim keys
+bind = $mainMod, h,  movefocus, l
+bind = $mainMod, j,  movefocus, d
+bind = $mainMod, k,  movefocus, u
+bind = $mainMod, l,  movefocus, r
+ 
+# swap focus with vim keys
+bind = $mainMod SHIFT, h,  swapwindow, l
+bind = $mainMod SHIFT, j,  swapwindow, d
+bind = $mainMod SHIFT, k,  swapwindow, u
+bind = $mainMod SHIFT, l,  swapwindow, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
