--- a/waybar/config
+++ b/waybar/config
@@ -84,7 +84,7 @@
     },
     "clock": {
         "timezone": "Europe/Berlin",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "tooltip-format": "<big>{:%B %Y}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}",
 	"locale": "de_DE.UTF-8"
     },
