--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -114,6 +114,7 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = workspace 10, class:^(1Password)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
