--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,13 +12,20 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080,auto,auto
+monitor=,1920x1080,auto,1.3
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
+# Start audio server
+exec-once = pipewire & pipewire-audio & pipewire-pulse & pipewire-alsa \ 
+	& pipwire-jack & wireplumber
+
 # Execute your favorite apps at launch
-exec-once = waybar 
+exec-once = waybar & dunst
+
+# Authentication agent: sudo for GUI
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -87,6 +94,11 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
+xwayland {
+  force_zero_scaling = true
+}
+
+
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -132,7 +144,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, N, cyclenext
 
-bind = $mainMod, L, exec, waylock
+bind = $mainMod, F1, exec, waylock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
