wlogout/swaylock + fix audio
exec-once pipewire command contained a few non-existing programs, which
caused most of them not to be started.

--- a/waybar/config
+++ b/waybar/config
@@ -34,7 +34,8 @@
 	"temperature", 
 	"keyboard-state", 
 	"battery", 
-	"tray"
+	"tray",
+	"custom/exit"
     ],
 
 
@@ -220,6 +221,13 @@
         "escape": true,
         "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+    },
+
+    // Power Menu
+    "custom/exit": {
+        "format": "",
+        "on-click": "wlogout",
+        "tooltip": false
     }
 }
 
