Keybind to restart waybar

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,6 +19,9 @@ exec-once = pipewire & pipewire-pulse & wireplumber
 # titlebar
 exec-once = waybar
 
+# wifi config
+exec-once = nm-applet
+
 # Execute your favorite apps at launch
 #exec-once = firefox
 
@@ -146,6 +149,8 @@ bind = $mainMod, N, cyclenext
 
 bind = $mainMod, F1, exec, wlogout
 bind = $mainMod, F12, exec, swaylock 
+
+bind = $mainMod, F5, exec, killall waybar && waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
