--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt5ct/colors/airy.conf
 custom_palette=false
 icon_theme=Adwaita
-standard_dialogs=default
+standard_dialogs=xdgdesktopportal
 style=Fusion
 
 [Fonts]
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x4\xd3\0\0\x2\xa3\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2:\0\0\0\0\x2\0\0\0\x5\0\0\0\0\0\0\0\0\0\0\0\x4\xd3\0\0\x2\xa3)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x2\xc4\0\0\x2\xf3\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2:\0\0\0\0\x2\0\0\0\x5\xc4\0\0\0\0\0\0\0\0\0\0\x2\xc4\0\0\x2\xf3)
 
 [Troubleshooting]
 force_raster_widgets=1
