--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,23 +140,26 @@ $mainMod = SUPER
 bind = $mainMod, T, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, E, exec, dolphin
+bind = $mainMod, F, exec, firefox
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, RETURN, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen
-bind = $mainMod, N, cyclenext
+bind = $mainMod, F11, fullscreen
+bind = $mainMod, W, cyclenext
 
 bind = $mainMod, F1, exec, wlogout
-bind = $mainMod, F12, exec, swaylock 
 
 bind = $mainMod, F5, exec, killall waybar && waybar
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, N, exec, ~/dotfiles/scripts/hide-window.sh
+
+bind = $mainMod, M, togglespecialworkspace, hidden
+bind = $mainMod SHIFT, M, exec, ~/dotfiles/scripts/restore-window.sh
+bind = $mainMod SHIFT, T, exec, ~/dotfiles/scripts/restore-window.sh term
+bind = $mainMod SHIFT, F, exec, ~/dotfiles/scripts/restore-window.sh fox
+
+
 
 # Move focus with vim keys
 bind = $mainMod, h,  movefocus, l
@@ -169,6 +172,12 @@ bind = $mainMod SHIFT, h,  swapwindow, l
 bind = $mainMod SHIFT, j,  swapwindow, d
 bind = $mainMod SHIFT, k,  swapwindow, u
 bind = $mainMod SHIFT, l,  swapwindow, r
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -183,16 +192,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -201,3 +210,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod CTRL, mouse:272, resizewindow
