Less rounding for hyprland windows

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,7 +20,8 @@ exec-once = pipewire & pipewire-pulse & wireplumber
 exec-once = waybar
 
 # wifi config
-exec-once = nm-applet
+# applet not needed unless I want to connect to a new network
+# exec-once = nm-applet
 
 # Execute your favorite apps at launch
 #exec-once = firefox
@@ -34,7 +35,7 @@ exec-once=~/dotfiles/scripts/lockscreentime.sh
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,20
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -68,7 +69,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 3
     
     blur {
         enabled = true
@@ -131,6 +132,7 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = workspace 10, class:^(1Password)$
 windowrulev2 = float, class:^(pavucontrol)$
+
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
