--- a/waybar/config
+++ b/waybar/config
@@ -2,44 +2,38 @@
     "include": ["~/dotfiles/waybar/modules.json"],
 
     "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
+                    // "position": "bottom", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
+                  // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
-    // Choose the order of the modules
+                  // Choose the order of the modules
+
     "modules-left": [
-	"hyprland/workspaces",
-	// "custom/right-arrow-light",
-	// "custom/right-arrow-dark",
-	"hyprland/window"
-	// "custom/right-arrow-dark"
+        "hyprland/workspaces",
+        "hyprland/window",
     ],
+
     "modules-center": [
-	//	"custom/left-arrow-dark",
-		"clock#1",
-	//	"custom/left-arrow-light",
-	//	"custom/left-arrow-dark",
-		"clock#2",
-	//	"custom/right-arrow-dark",
-	//	"custom/right-arrow-light",
-	        "clock#3"
-	//	"custom/right-arrow-dark"
-	],
-    // disabled modules:  "backlight, mpd", 
-    "modules-right": [
-    	"custom/updates",
-	"custom/left-arrow",
-	"pulseaudio", 
-	"network", 
-	"cpu", 
-	"memory",
-	"temperature", 
-	"keyboard-state", 
-	"battery", 
-	"tray",
-	"custom/exit"
+        "clock#1",
+        "clock#2",
+        "clock#3"
     ],
+    // disabled modules:  "backlight, mpd", 
 
 
- }
+
+    "modules-right": [
+        "custom/updates",
+        "custom/left-arrow",
+        "pulseaudio", 
+        "network", 
+        "cpu", 
+        "memory",
+        "temperature", 
+        "keyboard-state", 
+        "battery", 
+        "tray",
+        "custom/exit"
+    ],
+}
 
