--- a/arch/hypr/hyprland.conf
+++ b/arch/hypr/hyprland.conf
@@ -5,37 +5,39 @@
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080,auto,1.3
+monitor=,highres,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # notifications
-exec-once = dunst
+# exec-once = dunst
 
 # Start audio server
-exec-once = pipewire & pipewire-pulse & wireplumber
+# exec-once = pipewire & pipewire-pulse & wireplumber
 
 # titlebar
 exec-once = waybar
+
+# Wallpaper
+exec-once = wpaperd
 
 # wifi config
 # applet not needed unless I want to connect to a new network
 # exec-once = nm-applet
 
-# Execute your favorite apps at launch
-#exec-once = firefox
 
 # Authentication agent: sudo for GUI
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
-exec-once=~/dotfiles/scripts/lockscreentime.sh
+# exec-once=~/dotfiles/arch/scripts/lockscreentime.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,20
+env = WLR_NO_HARDWARE_CURSORS,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -154,12 +156,12 @@ bind = $mainMod, F1, exec, wlogout
 
 bind = $mainMod, F5, exec, killall waybar && waybar
 
-bind = $mainMod, N, exec, ~/dotfiles/scripts/hide-window.sh
+bind = $mainMod, N, exec, ~/dotfiles/arch/scripts/hide-window.sh
 
 bind = $mainMod, M, togglespecialworkspace, hidden
-bind = $mainMod SHIFT, M, exec, ~/dotfiles/scripts/restore-window.sh
-bind = $mainMod SHIFT, T, exec, ~/dotfiles/scripts/restore-window.sh term
-bind = $mainMod SHIFT, F, exec, ~/dotfiles/scripts/restore-window.sh fox
+bind = $mainMod SHIFT, M, exec, ~/dotfiles/arch/scripts/restore-window.sh
+bind = $mainMod SHIFT, T, exec, ~/dotfiles/arch/scripts/restore-window.sh term
+bind = $mainMod SHIFT, F, exec, ~/dotfiles/arch/scripts/restore-window.sh fox
 
 
 
