--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -22,6 +22,8 @@ exec-once = waybar
 # Wallpaper
 exec-once = wpaperd
 
+exec-once = thunderbird
+
 # wifi config
 # applet not needed unless I want to connect to a new network
 # exec-once = nm-applet
@@ -134,7 +136,7 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = workspace 10, class:^(1Password)$
 windowrulev2 = float, class:^(pavucontrol)$
-
+windowrulev2 = workspace 9, class:^(thunderbird)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
